# ESP32_Node_Sensor

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
lib/client_cfg/: CMakeLists.txt  client_cfg.c  client_cfg.h
lib/dht11/: CMakeLists.txt  dht11.c  dht11.h
lib/event_lib/: CMakeLists.txt  shared.c  shared.h
lib/light_sensor/: CMakeLists.txt  light_sen.c  light_sen.h
lib/moisture/: CMakeLists.txt  mois.c  mois.h
lib/mqtt_cfg/: CMakeLists.txt  component.mk  mqtt_cfg.c  mqtt_cfg.h
lib/nvs_storage/: CMakeLists.txt  nvs_storage.c  nvs_storage.h
lib/server_cfg/: CMakeLists.txt  server_cfg.c  server_cfg.h
lib/wifi_pro/: CMakeLists.txt  wifi_pro.c  wifi_pro.h
main/: main.c
spiffs_data/: app.js
